# pyAirfocusTools

./: .gitignore  .ignore  Instructions.txt  README.md  config.example  extract_usergroup_ids.py  find_workspace.py  get_group_contributors.py  get_license_usage.py  get_okr_compliance.py  get_prodmgt_compliance.py  list_extensions.py  list_group_contributors.py  list_okr_access.py  list_okr_contributors.py  main.py  okr.txt  options.txt  pyproject.toml  set_editor_role.py  set_field_options.py  set_role.py  set_workspace_extension.py  test_data.py  test_hierarchy.py  test_optimizations.py  test_utils.py  usergroup_ids.txt  utils.py
