[project]
name = "pyairfocustools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
